@@ -1,5 +1,5 @@
 /*
-% Copyright (C) 2003 - 2009 GraphicsMagick Group
+% Copyright (C) 2003 - 2012 GraphicsMagick Group
 % Copyright (C) 2002 ImageMagick Studio
 % Copyright 1991-1999 E. I. du Pont de Nemours and Company
 %
@@ -153,6 +153,76 @@ MagickExport void * MagickMalloc(const size_t size)
     return ((void *) NULL);
 
   return (MallocFunc)(size);
+}
+
+/*
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%                                                                             %
+%                                                                             %
+%                                                                             %
+%   M a g i c k M a l l o c A l i g n e d                                     %
+%                                                                             %
+%                                                                             %
+%                                                                             %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+%  MagickMallocAligned() allocates memory and returns a pointer to a
+%  block of memory capable of storing at least size bytes with the
+%  allocation's base address being an even multiple of alignment.
+%
+%  The requested alignment should be a power of 2 at least as large as
+%  sizeof(void *).  The requested alignment is increased to sizeof(void *)
+%  if it is less than sizeof(void *).
+% 
+%  NULL is returned if insufficient memory is available or the requested
+%  size is zero.
+%
+%  This function is intended for allocating special-purpose buffers
+%  which benefit from specific alignment.
+%
+%  The format of the  MagickMallocAligned method is:
+%
+%      void * MagickMallocAligned(size_t alignment, const size_t size)
+%
+%  A description of each parameter follows:
+%
+%    o size: The size of the memory in bytes to allocate.
+%
+%
+*/
+MagickExport void * MagickMallocAligned(const size_t alignment,const size_t size)
+{
+  size_t
+    alloc_size;
+
+  void
+    *alligned_p = 0;
+
+  alloc_size=(size+alignment-1)+sizeof(void *);
+
+  if ((size == 0) || (alignment < sizeof(void *)) || (alloc_size <= size))
+    return ((void *) NULL);
+
+#if defined(HAVE_POSIX_MEMALIGN)
+  if (posix_memalign(&alligned_p, alignment, size) != 0)
+    alligned_p=0;
+#elif defined(HAVE__ALIGNED_MALLOC)
+  alligned_p=_aligned_malloc(size,alignment);
+#else
+  {
+    void
+      *alloc_p;
+
+  if ((alloc_p = (MallocFunc)(alloc_size)) != NULL)
+    {
+      alligned_p=(void*)( ((magick_uintptr_t)alloc_p+sizeof(void *)
+			   +alignment-1)&~(alignment-1));
+      *((void **)alligned_p-1)=alloc_p;
+    }
+  }
+#endif
+
+  return alligned_p;
 }
 
 /*
@@ -339,8 +409,10 @@ MagickExport void *MagickRealloc(void *memory,const size_t size)
 %                                                                             %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
-%  MagickFree() frees memory that has already been allocated.  A NULL
-%  argument is ignored.
+%  MagickFree() frees memory that has already been allocated by
+%  MagickMalloc() or other other other allocators directly compatible
+%  with the currently defined memory allocator (which defaults to the
+%  system malloc()). For convenience, a NULL argument is ignored.
 %
 %  The format of the MagickFree method is:
 %
@@ -356,4 +428,47 @@ MagickExport void MagickFree(void *memory)
 {
   if (memory != (void *) NULL)
     (FreeFunc)(memory);
+}
+
+/*
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%                                                                             %
+%                                                                             %
+%                                                                             %
+%    M a g i c k F r e e A l i g n e d                                        %
+%                                                                             %
+%                                                                             %
+%                                                                             %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+%  MagickFreeAligned() frees aligned memory that has previously been
+%  allocated via MagickMallocAligned(). For convenience, a NULL argument is
+%  ignored.
+%
+%  This function exists in case the pointer allocated by
+%  MagickMallocAligned() can not be used directly with MagickFree().
+%
+%  The format of the MagickFreeAligned method is:
+%
+%      void MagickFreeAligned(void *memory)
+%
+%  A description of each parameter follows:
+%
+%    o memory: A pointer to a block of memory to free for reuse.
+%
+%
+*/
+MagickExport void MagickFreeAligned(void *memory)
+{
+  if (memory != (void *) NULL)
+    {
+#if defined (HAVE_POSIX_MEMALIGN)
+      (FreeFunc)(memory);
+#elif defined(HAVE__ALIGNED_MALLOC)
+      /* Windows Studio .NET 2003 or later */
+      _aligned_free(memory);
+#else
+      (FreeFunc)(*((void **)memory-1));
+#endif
+    }
 }
